implement Auth module

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,18 @@ OPENAI_API_KEY=sk-xxx
 
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# NextAuth
+NEXTAUTH_SECRET=your-secret-key-here-generate-with-openssl-rand-base64-32
+NEXTAUTH_URL=http://localhost:3000
+
+# OAuth - Google
+GOOGLE_CLIENT_ID=xxx.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=xxx
+
+# OAuth - Twitter/X
+TWITTER_CLIENT_ID=xxx
+TWITTER_CLIENT_SECRET=xxx
+
+# Web3 - WalletConnect
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=xxx
