--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.1",
     "@neondatabase/serverless": "^1.0.2",
+    "@rainbow-me/rainbowkit": "^2.2.9",
+    "@tanstack/react-query": "^5.90.12",
     "@upstash/redis": "^1.35.7",
     "@xyflow/react": "^12.9.3",
     "dagre": "^0.8.5",
     "drizzle-orm": "^0.44.7",
     "next": "15.1.0",
+    "next-auth": "^4.24.13",
     "openai": "^6.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "siwe": "^3.0.0",
+    "viem": "^2.41.2",
+    "wagmi": "^2.9.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
