--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "modern-screenshot": "^4.6.7",
     "next": "15.5.7",
     "next-auth": "^4.24.13",
+    "next-intl": "^4.5.8",
     "openai": "^6.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -39,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.7",
     "eslint": "^8",
     "eslint-config-next": "15.1.0",
