update wechat login

--- a/.env.example
+++ b/.env.example
@@ -23,5 +23,10 @@ GOOGLE_CLIENT_SECRET=xxx
 TWITTER_CLIENT_ID=xxx
 TWITTER_CLIENT_SECRET=xxx
 
+# OAuth - WeChat (optional - login button hidden if not set)
+# Get credentials from https://open.weixin.qq.com/
+WECHAT_APP_ID=xxx
+WECHAT_APP_SECRET=xxx
+
 # Web3 - WalletConnect
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=xxx
