add merge and AI chat function

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ WECHAT_APP_SECRET=xxx
 
 # Web3 - WalletConnect
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=xxx
+
+# Web Search - Tavily (optional - web search for trending tech disabled if not set)
+# Get API key from https://tavily.com/
+TAVILY_API_KEY=tvly-xxx
