feat: add ConfirmModal and showToast UI components, and options dropdown

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "openai": "^6.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "siwe": "^3.0.0",
     "viem": "^2.41.2",
     "wagmi": "^2.9.0",
