--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
+    "@extractus/article-extractor": "^8.0.20",
     "@neondatabase/serverless": "^1.0.2",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.12",
     "@upstash/redis": "^1.35.7",
     "@xyflow/react": "^12.9.3",
+    "cheerio": "^1.1.2",
     "dagre": "^0.8.5",
     "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
+    "mammoth": "^1.11.0",
     "modern-screenshot": "^4.6.7",
     "next": "15.5.7",
     "next-auth": "^4.24.13",
     "next-intl": "^4.5.8",
     "openai": "^6.9.1",
+    "pdf-parse": "^2.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
@@ -40,6 +44,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/dagre": "^0.7.53",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.3",
