--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@extractus/article-extractor": "^8.0.20",
     "@neondatabase/serverless": "^1.0.2",
     "@rainbow-me/rainbowkit": "^2.2.9",
+    "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.90.12",
     "@upstash/redis": "^1.35.7",
     "@xyflow/react": "^12.9.3",
