add payment and subscribe feature

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,18 @@ NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=xxx
 # Web Search - Tavily (optional - web search for trending tech disabled if not set)
 # Get API key from https://tavily.com/
 TAVILY_API_KEY=tvly-xxx
+
+# Stripe - Payments & Subscriptions
+# Get credentials from https://dashboard.stripe.com/
+STRIPE_SECRET_KEY=sk_test_xxx
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_xxx
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+
+# Stripe Price IDs (create these in Stripe Dashboard)
+STRIPE_PRICE_PRO_MONTHLY=price_xxx
+STRIPE_PRICE_PRO_YEARLY=price_xxx
+STRIPE_PRICE_PREMIUM_MONTHLY=price_xxx
+STRIPE_PRICE_PREMIUM_YEARLY=price_xxx
+STRIPE_PRICE_CREDITS_500=price_xxx
+STRIPE_PRICE_CREDITS_2000=price_xxx
+STRIPE_PRICE_CREDITS_5000=price_xxx
