--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/dagre": "^0.7.53",
     "@types/node": "^20",
@@ -55,6 +56,7 @@
     "drizzle-kit": "^0.31.7",
     "eslint": "^8",
     "eslint-config-next": "15.1.0",
+    "pino-pretty": "^13.1.3",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
     "typescript": "^5"
