--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
+    "jszip": "^3.10.1",
     "mammoth": "^1.11.0",
     "modern-screenshot": "^4.6.7",
     "next": "15.5.7",
