--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dagre": "^0.8.5",
     "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.23.26",
+    "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "mammoth": "^1.11.0",
@@ -39,6 +40,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "siwe": "^3.0.0",
     "stripe": "^20.0.0",
     "viem": "^2.41.2",
